Labelled the links

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <a href="Pages/Shrimp Salsa.html">Shrimp Salsa</a>
             </li>
             <li>
-                <a href="Pages/Strwberry Pie.html"></a>
+                <a href="Pages/Strwberry Pie.html">Strawberry Pie</a>
             </li>
             <li>
-                <a href="Pages/Crispy Baked Chicken Legs.html"></a>
+                <a href="Pages/Crispy Baked Chicken Legs.html">Crispy Baked Chicken Legs</a>
             </li>
             <li>
-                <a href="Pages/Red Coconut Curry with Shrimp.html"></a>
+                <a href="Pages/Red Coconut Curry with Shrimp.html">Red Coconut Curry with Shrimp</a>
             </li>
         </ul>
     </body>
