--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <h1>Odin's Recipes</h1>
         <ul>
             <li>
-                <a href="Pages/Cheesy Chicken Lasgana.html">Cheesy Chicken Lasagna</a>
+                <a href="./Recipes/Pages/Cheesy Chicken Lasgana.html">Cheesy Chicken Lasagna</a>
             </li>
             <li>
-                <a href="Pages/Shrimp Salsa.html">Shrimp Salsa</a>
+                <a href="./Recipes/Pages/Shrimp Salsa.html">Shrimp Salsa</a>
             </li>
             <li>
-                <a href="Pages/Strwberry Pie.html">Strawberry Pie</a>
+                <a href="./Recipes/Pages/Strwberry Pie.html">Strawberry Pie</a>
             </li>
             <li>
-                <a href="Pages/Crispy Baked Chicken Legs.html">Crispy Baked Chicken Legs</a>
+                <a href="./Recipes/Pages/Crispy Baked Chicken Legs.html">Crispy Baked Chicken Legs</a>
             </li>
             <li>
-                <a href="Pages/Red Coconut Curry with Shrimp.html">Red Coconut Curry with Shrimp</a>
+                <a href="./Recipes/Pages/Red Coconut Curry with Shrimp.html">Red Coconut Curry with Shrimp</a>
             </li>
         </ul>
     </body>
