--- a/Recipes/Pages/Crispy Baked Chicken Legs.html
+++ b/Recipes/Pages/Crispy Baked Chicken Legs.html
@@ -9,39 +9,41 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Crispy Baked Chicken Legs</h1>
+        <div>
+            <h1>Crispy Baked Chicken Legs</h1>
 
-        <img src="../Images/Crispy-Baked-Chicken.jpeg" alt="Crispy Baked Cjicken Legs">
+            <img src="../Images/Crispy-Baked-Chicken.jpeg" alt="Crispy Baked Cjicken Legs">
 
-        <p>
-            Crispy baked chicken legs inspired by my daughter, Ivy. This is fast and easy
-        </p>
+            <p>
+                Crispy baked chicken legs inspired by my daughter, Ivy. This is fast and easy
+            </p>
 
-        <h2><strong>Ingredients</strong></h2>
-            <ul>
-                <li>4 pounds chicken legs</li>
-                <li>2 tablespoons chili powder</li>   
-                <li>1 tablespoon garlic powder</li>    
-                <li>1 teaspoon cayenne pepper</li>    
-                <li>1 teaspoon Himalayan pink salt</li>    
-                <li>2 tablespoons tamari</li>
-            </ul>
+            <h2><strong>Ingredients</strong></h2>
+                <ul>
+                    <li>4 pounds chicken legs</li>
+                    <li>2 tablespoons chili powder</li>   
+                    <li>1 tablespoon garlic powder</li>    
+                    <li>1 teaspoon cayenne pepper</li>    
+                    <li>1 teaspoon Himalayan pink salt</li>    
+                    <li>2 tablespoons tamari</li>
+                </ul>
 
-        <h2><strong>Steps</strong></h2>
-            <ol>
-                <li>
-                    Preheat the oven to 375 degrees F (190 degrees C).
-                </li>
-                <li>
-                    Place chicken legs in a large bowl. 
-                    Spread chili powder, garlic powder, cayenne, and salt onto the chicken; 
-                    pour sauce over top. Mix thoroughly and transfer to a baking sheet.
-                </li>
-                <li>
-                    Bake, uncovered, in the preheated oven until chicken is no longer pink at the 
-                    bone and the juices run clear, 45 to 50 minutes. 
-                    An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).
-                </li>
-            </ol>
+            <h2><strong>Steps</strong></h2>
+                <ol>
+                    <li>
+                        Preheat the oven to 375 degrees F (190 degrees C).
+                    </li>
+                    <li>
+                        Place chicken legs in a large bowl. 
+                        Spread chili powder, garlic powder, cayenne, and salt onto the chicken; 
+                        pour sauce over top. Mix thoroughly and transfer to a baking sheet.
+                    </li>
+                    <li>
+                        Bake, uncovered, in the preheated oven until chicken is no longer pink at the 
+                        bone and the juices run clear, 45 to 50 minutes. 
+                        An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).
+                    </li>
+                </ol>
+        </div>
     </body>
 </html>
