--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Odin's Recipes</h1>
-        <ul>
-            <li>
-                <a href="./Recipes/Pages/Cheesy Chicken Lasgana.html">Cheesy Chicken Lasagna</a>
-            </li>
-            <li>
-                <a href="./Recipes/Pages/Shrimp Salsa.html">Shrimp Salsa</a>
-            </li>
-            <li>
-                <a href="./Recipes/Pages/Strwberry Pie.html">Strawberry Pie</a>
-            </li>
-            <li>
-                <a href="./Recipes/Pages/Crispy Baked Chicken Legs.html">Crispy Baked Chicken Legs</a>
-            </li>
-            <li>
-                <a href="./Recipes/Pages/Red Coconut Curry with Shrimp.html">Red Coconut Curry with Shrimp</a>
-            </li>
-        </ul>
+        <div>
+            <h1>Odin's Recipes</h1>
+                <ul>
+                    <li>
+                        <a href="./Recipes/Pages/Cheesy Chicken Lasgana.html">Cheesy Chicken Lasagna</a>
+                    </li>
+                    <li>
+                        <a href="./Recipes/Pages/Shrimp Salsa.html">Shrimp Salsa</a>
+                    </li>
+                    <li>
+                        <a href="./Recipes/Pages/Strwberry Pie.html">Strawberry Pie</a>
+                    </li>
+                    <li>
+                        <a href="./Recipes/Pages/Crispy Baked Chicken Legs.html">Crispy Baked Chicken Legs</a>
+                    </li>
+                    <li>
+                        <a href="./Recipes/Pages/Red Coconut Curry with Shrimp.html">Red Coconut Curry with Shrimp</a>
+                    </li>
+                </ul>
+        </div>
     </body>
 </html>
